# jb.sh

./: .gitmodules  LICENSE  README.md  build.sh  jb.sh
.github/actions/: build.yml
.github/workflows/: main.yml
build_jobs/: 00_header.sh  01_cleanup.sh  02_build_natives.sh  03_download_firmware.sh  04_generate_uks.sh  05_generate_uks.sh  05_pack_files.sh  05_pack_tars.sh  06_generate_persistence_script.sh  06_generate_system_patch_script.sh  06_pack_script_files.sh  07_pack_script_files.sh  08_pack_script_jobs.sh  08_pack_tar_files.sh  09_pack_script_jobs.sh  99_compress_script.sh
fbink_patch/: meson.build  meson_options.txt
src/: helpers.sh
src/helpers/: 00_helpers.sh  01_header.sh
src/jb_sh_jobs/: 00_check_jailbroken.sh  01_header.sh  01_setup_kmc_files.sh  01_unpack_kmc_files.sh  02_unpack_kmc_files.sh  03_setup_kmc.sh  04_install_mkk_dev_keystore.sh  05_patch_system.sh  06_cleanup.sh
src/jobs/: 00_helpers.sh  01_setup_kmc_binaries.sh  01_setup_kmc_files.sh  02_install_update_keys.sh  02_setup_dispatch.sh  03_install_debug_commands.sh  03_install_mkk_dev_keystore.sh  04_install_mkk_kindlet_jb.sh  09_install_kmc_upstart.sh  10_ota_rename.sh  install_kmc_upstart.sh
src/kmc/: run_hotfix.sh
src/persistence_jobs/: 01_fixup_permissions.sh  01_setup_kmc.sh  02_install_update_keys.sh  04_install_mkk_kindlet_jb.sh  07_install_gm_debugging.sh  08_install_mntus_exec.sh  99_mntroot.sh
src/system_patch_jobs/: 00_header.sh  01_mntroot.sh  01_setup_kmc.sh  02_install_update_keys.sh  03_install_mkk_dev_keystore.sh  (+7 more)
system_patcher/: .gitignore  main.c  meson.build
(+16 files in other folders)
